--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-	<title>index</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>网站</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	
+<!--[if lte IE 8]>
+<p class="browserupgrade">您的浏览器太老啦，请在<a href="http://browsehappy.com">这里</a>升级</p>
+<![endif]-->
+<header>
+    <nav class="top"></nav>
+    <nav class="main"></nav>
+</header>
 </body>
 </html>
