--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,247 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>网站</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-<!--[if lte IE 8]>
+    <!--[if lte IE 8]>
 <p class="browserupgrade">您的浏览器太老啦，请在<a href="http://browsehappy.com">这里</a>升级</p>
 <![endif]-->
-<header>
-    <nav class="top"></nav>
-    <nav class="main"></nav>
-</header>
+    <header>
+        <nav class="top">
+            <span class="tel">理财热线：400-888-666</span>
+            <ul>
+                <li><a href="#">登录</a></li>
+                <li><a href="#">快速注册</a></li>
+                <li><a href="#">关于</a></li>
+                <li><a href="#">帮助</a></li>
+                <li><a href="#">APP下载</a></li>
+            </ul>
+        </nav>
+        <nav class="main">
+            <a href="#" class="brand">
+                <img src="img/logo@1x.png" alt="回到首页">
+            </a>
+            <ul>
+                <li><a href="#">首页</a></li>
+                <li><a href="#">理财频道</a></li>
+                <li><a href="#">投资频道</a></li>
+                <li><a href="#">新手专区</a></li>
+                <li><a href="#">安全顾问</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container"> 
+        <section class="transaction">
+            <div class="trans-content">
+                <div class="trans-data">
+                    <span>平台累计成交金额</span>
+                    <span class="trans-money">198888</span>
+                    <span>万元</span>
+                </div>
+                <div class="trans-data">
+                    <span>过去七日成交金额</span>
+                    <span class="trans-money">7788</span>
+                    <span>万元</span>
+                </div>
+                <div class="trans-report">
+                    <a href="#">查看平台运营报告</a>
+                </div>
+            </div>
+        </section>
+        <section class="ad">
+            <div><img src="img/ad001.png" alt=""></div>
+            <div><img src="img/ad002.png" alt=""></div>
+            <div><img src="img/ad003.png" alt=""></div>
+        </section>
+        <section class="feature">
+            <div class="item">
+                <h3>安全</h3>
+                <p>国家AAA级信用<br>银行资金托管<br>上市公司保障</p>
+            </div>
+            <div class="item">
+                <h3>权威/h3>
+                    <p>中央电视台推荐<br>互联网百强<br>标准起草</p>
+            </div>
+            <div class="item">
+                <h3>省心</h3>
+                <p>100元起投<br>用户利益之上<br>保险公司承担 </p>
+            </div>
+        </section>
+        <section class="notice">
+            <a href="#"><span>2020-10-21</span> 国庆期间的滴滴答答滴滴答答滴滴答答的啊啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+            <a href="#" class="more">更多公告</a>
+        </section>
+        <section class="product">
+            <h2>
+                固定期限产品
+                <em>甄选优质产品</em>
+                <em>省时省力</em>
+                <em>坐等收益</em>
+            </h2>
+            <div class="product-content">
+                <div class="item">
+                    <h3><em>3</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>3-6</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>6-12</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>12-24</em>个月</h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>24</em>个月以上</h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="product"> 
+            <h2>
+                债券/散标产品
+                <em>自主投资</em>
+                <em>期限灵活</em>
+            </h2>
+            <div class="product-content">
+                <div class="item">
+                    <h3><em>3</em>个月<i>日常生活消费</i></h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>5</em>个月<i>资金周转</i></h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>7</em>个月<i>个人消费</i></h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>1</em>个月<i>日常生活消费</i></h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <h3><em>12</em>个月以上<i>资金周转</i></h3>
+                    <div class="info">
+                        <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
+                        <p>总成交金额：<span class="money">1880</span><i>万元</i></p>
+                    </div>
+                    <div class="buy">
+                        <a href="#">购买</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="footer">
+            <div class="footer-content">
+                <p class="brand"></p>
+                <ul>
+                    <li class="title">关于我们</li>
+                    <li><a href="#">公司简介</a></li>
+                    <li><a href="#">业务模式</a></li>
+                    <li><a href="#">合作机构</a></li>
+                    <li><a href="#">服务模式 </a></li>
+                </ul>
+                <ul>
+                    <li class="title">风险防范</li>
+                    <li><a href="#">账号安全</a></li>
+                    <li><a href="#">安全保障</a></li>
+                </ul>
+                <ul>
+                    <li class="title">理财产品</li>
+                    <li><a href="#">固定期限</a></li>
+                    <li><a href="#">债券/散标</a></li>
+                </ul>
+                <ul>
+                    <li class="title">交易帮助</li>
+                    <li><a href="#">购买</a></li>
+                    <li><a href="#">赎回</a></li>
+                    <li><a href="#">提现</a></li>
+                </ul>
+                <ul>
+                    <li class="title">机构服务</li>
+                    <li><a href="#">机构中心</a></li>
+                    <li><a href="#">合作联系</a></li>
+                </ul>
+            </div>
+        </section>
+    </div>
+    <footer>
+        <ul>
+            <li><span class="icon icon-zfywykz">支付业务许可证</span></li>
+            <li><span class="icon icon-pcirz">PCI认证</span></li>
+            <li><span class="icon icon-visarz">Visa 认证</span></li>
+            <li><span class="icon icon-vsjmfw">VerSign 加密服务</span></li>
+            <li><span class="icon icon-wlgs">网络工商</span></li>
+            <li><span class="icon icon-dzswxh">电子商务协会</span></li>
+            <li><span class="icon icon-bjgs">北京工商</span></li>
+        </ul>
+        <p>北京京东金融互联网公司 版权所有 ©️ 2020-2021 </p>
+    </footer>
 </body>
+
 </html>
