--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>网站</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <!--[if lte IE 8]>
+<!--[if lte IE 8]>
 <p class="browserupgrade">您的浏览器太老啦，请在<a href="http://browsehappy.com">这里</a>升级</p>
 <![endif]-->
     <header>
@@ -36,9 +37,9 @@
             </ul>
         </nav>
     </header>
-    <div class="container"> 
+    <div class="container">
         <section class="transaction">
-            <div class="trans-content">
+            <div class="trans-content clearfix">
                 <div class="trans-data">
                     <span>平台累计成交金额</span>
                     <span class="trans-money">198888</span>
@@ -65,19 +66,19 @@
                 <p>国家AAA级信用<br>银行资金托管<br>上市公司保障</p>
             </div>
             <div class="item">
-                <h3>权威/h3>
-                    <p>中央电视台推荐<br>互联网百强<br>标准起草</p>
+                <h3>权威</h3>
+                <p>中央电视台推荐<br>互联网百强<br>标准起草</p>
             </div>
             <div class="item">
                 <h3>省心</h3>
                 <p>100元起投<br>用户利益之上<br>保险公司承担 </p>
             </div>
         </section>
-        <section class="notice">
-            <a href="#"><span>2020-10-21</span> 国庆期间的滴滴答答滴滴答答滴滴答答的啊啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+        <section class="notice clearfix">
+            <a href="#"><span>2020-10-21</span> 国庆期间的滴滴答答滴滴答答滴滴答答的啊啊啊啊啊啊啊啊啊啊啊啊啊啊国庆期间的滴滴答答滴滴答答滴滴答答的啊啊啊啊啊啊啊啊啊啊啊啊啊啊国庆期间的滴滴答答滴滴答答滴滴答答的啊啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
             <a href="#" class="more">更多公告</a>
         </section>
-        <section class="product">
+        <section class="product clearfix">
             <h2>
                 固定期限产品
                 <em>甄选优质产品</em>
@@ -85,7 +86,7 @@
                 <em>坐等收益</em>
             </h2>
             <div class="product-content">
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -95,7 +96,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3-6</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -105,7 +106,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>6-12</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -115,7 +116,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>12-24</em>个月</h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -125,7 +126,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>24</em>个月以上</h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -137,14 +138,14 @@
                 </div>
             </div>
         </section>
-        <section class="product"> 
+        <section class="product clearfix">
             <h2>
                 债券/散标产品
                 <em>自主投资</em>
                 <em>期限灵活</em>
             </h2>
             <div class="product-content">
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>3</em>个月<i>日常生活消费</i></h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -154,7 +155,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>5</em>个月<i>资金周转</i></h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -164,7 +165,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>7</em>个月<i>个人消费</i></h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -174,7 +175,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>1</em>个月<i>日常生活消费</i></h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -184,7 +185,7 @@
                         <a href="#">购买</a>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item clearfix">
                     <h3><em>12</em>个月以上<i>资金周转</i></h3>
                     <div class="info">
                         <p>约定年化收益：<span class="year-rate">3.5%</span><i>起</i></p>
@@ -197,7 +198,7 @@
             </div>
         </section>
         <section class="footer">
-            <div class="footer-content">
+            <div class="footer-content clearfix">
                 <p class="brand"></p>
                 <ul>
                     <li class="title">关于我们</li>
